// Vitest Snapshot v1

exports[`Swiper > :props > :animation fade 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content t-swiper-fade"
    >
      <div
        class="t-swiper__container"
      />
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    />
  </div>
</div>
`;

exports[`Swiper > :props > :autoplay 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      />
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    />
  </div>
</div>
`;

exports[`Swiper > :props > :defaultCurrent 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      />
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    />
  </div>
</div>
`;

exports[`Swiper > :props > :direction 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside t-swiper--vertical"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(0, -0%, 0px);"
      />
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    />
  </div>
</div>
`;

exports[`Swiper > :props > :duration 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      />
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    />
  </div>
</div>
`;

exports[`Swiper > :props > :height 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      />
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    />
  </div>
</div>
`;

exports[`Swiper > :props > :interval 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      />
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    />
  </div>
</div>
`;

exports[`Swiper > :props > :loop 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      />
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    />
  </div>
</div>
`;

exports[`Swiper > :props > :navigation 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--outside t-swiper--large"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      />
    </div>
    <ul
      class="t-swiper__navigation"
    />
  </div>
</div>
`;

exports[`Swiper > :props > :theme 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      />
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    />
  </div>
</div>
`;

exports[`Swiper > :props > :type 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content t-swiper-card"
    >
      <div
        class="t-swiper__container"
      />
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    />
  </div>
</div>
`;

exports[`Swiper > additional function > navigation: VNode 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      />
    </div>
    <div>
      123
    </div>
    <div
      class="t-swiper__arrow t-swiper__arrow--default"
    >
      <div
        class="t-swiper__arrow-left"
      >
        <svg
          class="t-icon t-icon-chevron-left"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M15.91 17.5l-5.5-5.5 5.5-5.5-1.41-1.41L7.59 12l6.91 6.91 1.41-1.41z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="t-swiper__arrow-right"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M8.09 17.5l5.5-5.5-5.5-5.5L9.5 5.09 16.41 12 9.5 18.91 8.09 17.5z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Swiper > additional function > no valid panel 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      />
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    />
    <div
      class="t-swiper__arrow t-swiper__arrow--default"
    >
      <div
        class="t-swiper__arrow-left"
      >
        <svg
          class="t-icon t-icon-chevron-left"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M15.91 17.5l-5.5-5.5 5.5-5.5-1.41-1.41L7.59 12l6.91 6.91 1.41-1.41z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="t-swiper__arrow-right"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M8.09 17.5l5.5-5.5-5.5-5.5L9.5 5.09 16.41 12 9.5 18.91 8.09 17.5z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
